--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,14 @@
   --mainDark: #232528;
   --mainYellow: #ffa400;
   --transition: all 1s linear;
+  overflow-x: hidden;
 }
 
 body{
   font-family: 'Oswald', sans-serif !important;
   background: var(--mainWhite) !important;
   color: var(--mainDark) !important;
+  overflow-x: hidden;
 }
 
 .text-title{
@@ -42,4 +44,13 @@ body{
   cursor: pointer;
   font-size: 1.2rem;
   color: var(--mainYellow) !important;
+}
+
+@media (max-width: 600px){
+  body{
+    overflow-x: hidden !important;
+  }
+  :root{
+    overflow-x: hidden;
+  }
 }
